Edit file and edit document file

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,30 +1,77 @@
+/* mobile */
 @media (max-width: 600px) {
-    /* your code should be written here  */
-    .detaile-container{
-       flex-direction: column;
+    /*start Detaile page for mobiel*/
+
+    .detaile-container {
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        }
-        .img-detaile img {
-            width: 80vw;
-            /* margin-left: 23%; */
+    }
+
+    .img-detaile img {
+        width: 80vw;
+
+    }
+
+    .review-container {
+        width: 60%;
+        margin: auto;
+    }
+
+    .review-title {
+        flex-direction: column;
+        gap: 0px;
+    }
+
+    .share-review {
+        flex-direction: column;
+    }
+
+    .content-detaile {
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 24%;
+        margin: auto;
+        padding-top: 40px;
+    }
+
+    /* start Submit page for mobiel */
+    form {
+        width: 75%;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .btn-form {
+        width: 100%;
+    }
+
+    button {
+        margin: auto;
+        margin-top: 18px;
+    }
+
 }
-/* .content-detaile ul {
-text-align: center;
-} */
-.review-container{
-    width: 60%;
+
+/*Tablet*/
+
+/* start Detaile page for tablet */
+.detaile-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
     margin: auto;
 }
-.review-title{
-    flex-direction: column;
-    gap:0px;
-}
-.share-review{
-    flex-direction: column;
-}
-.content-detaile{
-    
+
+.content-detaile {
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,66 +81,34 @@ text-align: center;
     padding-top: 40px;
 }
 
-/*submit page */
-form{
-    width: 75%;
+.review-container {
+    width: 50%;
     margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-}
-.btn-form{
-    width: 100%;
-}
-button{
-    margin:auto;
-    margin-top: 18px;
 }
 
+.review-title {
+    gap: 221px;
 }
-/*Tablet*/
-@media (min-width: 601px) and  (max-width:900px) {
-    /*submit page */
-    
-   form{ display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start; 
-    width: 90%;
+
+.share-review {
     margin: auto;
-    }
-    .btn-form{
-        width: 100%;
-    }
-/* details page */
-.detaile-container{
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 80%;
-    margin: auto;
-}
-    .content-detaile{
-    
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 24%;
-        margin: auto;
-        padding-top: 40px;
-    }
-    .review-container{
-        width: 50%;
-    margin: auto;
-    }
-    .review-title{
-        gap: 221px;
-    }
-    .share-review{
-        margin: auto;
     width: 50%;
     padding-top: 17px;
+}
+
+/* start Submit page for Tablet */
+@media (min-width: 601px) and (max-width:900px) {
+
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        width: 90%;
+        margin: auto;
+    }
+
+    .btn-form {
+        width: 100%;
     }
 }
