--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,43 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
- 
+
 
 /*start Detaile page*/
-.detaile-container{
-display: flex;
-justify-content: space-around;
-align-items: center;
+.detaile-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
-.content-detaile ul{
+
+.content-detaile ul {
     margin-left: 35px;
 }
-.img-detaile img{
+
+.img-detaile img {
     width: 100%;
     margin: auto;
     display: flex;
-    /* flex-direction: row; */
     align-items: center;
     justify-content: space-around;
-    
+
 }
-.content-detaile{
+
+.content-detaile {
     margin-left: -229px;
     line-height: 26px;
     margin-top: 86px;
 }
-content-detaile h3,h4{
+
+content-detaile h3,
+h4 {
     text-transform: uppercase;
 }
-.detaile-btn button{
+
+.detaile-btn button {
     width: 92px;
     border-radius: 15px;
     height: 34px;
@@ -40,67 +45,73 @@ content-detaile h3,h4{
     margin-left: 10px;
     border: 1px solid #FFC700;
     box-sizing: border-box;
-    
+
 }
 
 .detaile-btn .btn2 {
     background-color: #FAC552;
 }
 
-.review-container{
+.review-container {
     display: flex;
     flex-direction: column;
     gap: 30px;
     margin-top: 10%;
     justify-content: space-around;
     align-items: center;
-   
+
 }
-.review-title{
+
+.review-title {
     display: flex;
     justify-content: space-around;
     align-items: center;
     gap: 787px;
 }
-.review-direction{
+
+.review-direction {
     display: flex;
-    gap:50px;
+    gap: 50px;
 }
-.reviw-card1{
-    
-    
+
+.reviw-card1 {
     border-style: outset;
     border-bottom: 1px solid gray;
-    
+
 }
-.view-border{
+
+.view-border {
     border-bottom: 1px solid black
 }
-.share-review{
-    display: flex;
-    gap: 4px;}
 
-    /*start submit css*/
-    h2{
-        color: #1C598E;
-        text-align: center;
-        margin-top: 3em;
+.share-review {
+    display: flex;
+    gap: 4px;
 }
 
-    
-    h2 .recipe-color{
-        color:#FFC700;
-    }
-    form{
-        margin-left: 33%;
+/*start submit css*/
+h2 {
+    color: #1C598E;
+    text-align: center;
+    margin-top: 3em;
+}
+
+
+h2 .recipe-color {
+    color: #FFC700;
+}
+
+form {
+    margin-left: 33%;
     margin-top: 2%;
     border: 1px solid #FFC700;
     display: inline-block;
     width: 35%;
     padding: 32px;
-    }
-    .btn-form{
-        width: 473px;
+}
+
+.btn-form {
+    width: 473px;
     border-radius: 5px;
     height: 32px;
     margin-top: 10px;
@@ -108,9 +119,10 @@ content-detaile h3,h4{
     border: 1px solid #FFC700;
     box-sizing: border-box;
 
-    }
-    button{
-        text-align: center;
+}
+
+button {
+    text-align: center;
     width: 90px;
     height: 30px;
     margin-left: 42%;
@@ -119,11 +131,4 @@ content-detaile h3,h4{
     border-radius: 10px;
     color: #1C598E;
     border: none;
-    }
-   /* .fa-solid {
-        color: #22c32d;
-    position: absolute;
-    bottom: -96px;
-    right: 512px;
-    z-index: 1;
-    } */
+}
