--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,8 +1,48 @@
-<<<<<<< HEAD
 
-
-/* الجوال */
+/* mobile */
+@media (max-width: 767px) {
 /* index */
+#hero {
+    width: 100%;
+    /* position: absolute; */
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
+#gallary {
+    padding-right: 0px;
+}
+nav li {
+    display: block;
+    margin-bottom: 5px;
+  }
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    height: 994px;
+    padding-left: 0px;
+    margin-left: 0%;
+    margin-top: 80px;
+}
+.main p{
+    text-align: start;
+}
+.button-center button {
+    text-align: center;
+    margin-top: 30px;
+    border: 3px solid #F9AB01;
+    border-radius: 21px;
+    width: 162px;
+    height: 43px;
+    font-size: 18px;
+    color: #1C598E;
+    background-color: #fff;
+    margin-left: 0px;
+    margin-right: 0px;
+
+}
 .feature-content {
     display: flex;
     justify-content: center;
@@ -36,21 +76,15 @@ footer{
 .menu-content-cards {
 
     width: 71vw;
-}
-/* الوسط */
-/* index */
-.main {
-    padding-left: 39px;
-}
-/* list */
-.menu-content-cards {
-    height: 399px;
+    height: 402px;
+
 }
 .menu-content-cards button {
-    width: 9vw;
-=======
-/* mobile */
-@media (max-width: 600px) {
+    width: 33vw;
+    height: 33px;
+
+    font-size: 17px;
+}
     /*start Detaile page for mobiel*/
 
     .detaile-container {
@@ -110,46 +144,60 @@ footer{
 
 }
 
-/*Tablet*/
 
-/* start Detaile page for tablet */
-.detaile-container {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 80%;
-    margin: auto;
-}
 
-.content-detaile {
+@media (min-width: 768px) and (max-width : 991px) {
+    /* *Tablet*/ 
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 24%;
-    margin: auto;
-    padding-top: 40px;
-}
-
-.review-container {
-    width: 50%;
-    margin: auto;
-}
-
-.review-title {
-    gap: 221px;
-}
-
-.share-review {
-    margin: auto;
-    width: 50%;
-    padding-top: 17px;
-}
-
-/* start Submit page for Tablet */
-@media (min-width: 601px) and (max-width:900px) {
-
+    /* index */
+    .main {
+        padding-left: 39px;
+    }
+    #gallary {
+        padding-right: 0px;
+    }
+    /* list */
+    .menu-content-cards {
+    height: 412px;
+    }
+    .menu-content-cards button {
+        width: 9vw;}
+    
+    /* start Detaile page for tablet */
+    .detaile-container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 80%;
+        margin: auto;
+    }
+    
+    .content-detaile {
+    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 24%;
+        margin: auto;
+        padding-top: 40px;
+    }
+    
+    .review-container {
+        width: 50%;
+        margin: auto;
+    }
+    
+    .review-title {
+        gap: 221px;
+    }
+    
+    .share-review {
+        margin: auto;
+        width: 50%;
+        padding-top: 17px;
+    }
+    /* /* start Submit page for Tablet */ 
     form {
         display: flex;
         flex-direction: column;
@@ -162,5 +210,22 @@ footer{
     .btn-form {
         width: 100%;
     }
->>>>>>> 3d387ece842c90bdf0c58e1a59d744e917695354
+
+}
+
+@media (max-width : 992px) {
+
+    .menu-content-cards h3{
+        padding-bottom: 0%;
+      }
+
+      .rate {
+        width: 258px;
+      }
+
+      .menu-content-cards{
+        width: 383px;
+        height: 385px;
+      
+      }
 }
