--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,25 @@
-<<<<<<< HEAD
+
+* {
+    /* padding: 0; */
+    /* margin: 0; */
+    /* box-sizing: border-box; */
+    /* position: relative; */
+  
+}
+
+
 
 
 
 /* -------------------------index page------------------- */
 
+a{
+  text-decoration: none;
 
+}
+#gallary{
+  padding-right: 200px;
+}
 
 ul li{
   list-style-type: none;
@@ -31,7 +46,7 @@ ul li{
     border-radius: 20px; */
 
     width: 100%;
-    position: absolute;
+    /* position: absolute; */
     display: flex;
     justify-content: center;
     align-items: start;
@@ -67,7 +82,7 @@ ul li{
  justify-content: center; 
  align-items: flex-start;
  height: 994px;
- padding-left: 211px;
+ padding-left: 164px;
 }
 
 
@@ -166,6 +181,7 @@ left: 0; */
     display: flex;
     justify-content: center;
     gap: 11px;
+    margin-bottom: 30px;
 }
 .list-content ul li{
     display: flex;
@@ -305,7 +321,7 @@ position: relative;
     /* padding-left: 8px;
     line-height: 22px;
     margin-top: 13px; */
-    /* margin-bottom: 0%; */
+    margin-left: 0%;
   }
   .button-cards{
     display: flex;
@@ -347,6 +363,7 @@ position: relative;
     font-size: 18px;
     color: #1C598E;
     background-color: #fff;
+    margin-left: 0px;
 }
   
 /* footer */
@@ -409,19 +426,6 @@ footer{
   font-size: 16px;
 
 }
-
-  
-  
-
-
-=======
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-
 
 /*start Detaile page*/
 .detaile-container {
