--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,7 +1,6 @@
-/* mobile */
 @media (max-width: 600px) {
-    /*start Detaile page for mobiel*/
 
+    /* your code should be written here  */
     .detaile-container {
         flex-direction: column;
         justify-content: center;
@@ -10,35 +9,82 @@
 
     .img-detaile img {
         width: 80vw;
-
+        /* margin-left: 23%; */
     }
 
+    ul {
+        margin-top: -21px;
+    }
+
+    .detaile-btn {
+        display: flex;
+    }
+
+
     .review-container {
-        width: 60%;
+        width: 80%;
         margin: auto;
     }
 
     .review-title {
-        flex-direction: column;
-        gap: 0px;
+        width: 100%;
+        gap: 75px;
+        margin-top: 61px;
+    }
+
+    .reviw-card1 {
+        width: 100%;
+        height: 20vh;
+    }
+
+    .review-direction {
+
+        gap: 10px;
+    }
+    .name-rate{
+        width: 140vw;
+    }
+
+    .data-review {
+        width: 40%;
+    }
+    .content-review p {
+        width: 63vw;
     }
 
     .share-review {
+
+        gap: 10px;
+
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        margin: auto;
     }
 
     .content-detaile {
 
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: center;
-        width: 24%;
+        width: 60%;
         margin: auto;
         padding-top: 40px;
     }
 
-    /* start Submit page for mobiel */
+    .reviw-card1 img {
+        width: 20%;
+        margin: auto;
+        padding-left: 20px;
+    }
+
+    .icon-review {
+        margin-top: -18px;
+    }
+
+
+    /*submit page */
     form {
         width: 75%;
         margin: auto;
@@ -57,47 +103,20 @@
         margin-top: 18px;
     }
 
+    #icon-plus {
+        color: #1C598E;
+        position: absolute;
+        right: 14%;
+        font-size: 2.5em;
+        border: -0.5px solid;
+        top: 488px;
+    }
+
 }
 
 /*Tablet*/
-
-/* start Detaile page for tablet */
-.detaile-container {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 80%;
-    margin: auto;
-}
-
-.content-detaile {
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 24%;
-    margin: auto;
-    padding-top: 40px;
-}
-
-.review-container {
-    width: 50%;
-    margin: auto;
-}
-
-.review-title {
-    gap: 221px;
-}
-
-.share-review {
-    margin: auto;
-    width: 50%;
-    padding-top: 17px;
-}
-
-/* start Submit page for Tablet */
 @media (min-width: 601px) and (max-width:900px) {
+    /*submit page */
 
     form {
         display: flex;
@@ -110,5 +129,99 @@
 
     .btn-form {
         width: 100%;
+    }
+    #icon-plus{
+       
+        right: 6%;
+        font-size: 2.5em;
+        
+        top: 489px;
+    }
+    
+
+    /* details page */
+    .detaile-container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .img-detaile img {
+        width: 90%;
+        height: 60%;
+        margin: auto;
+    }
+
+    .content-detaile {
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        align-items: flex-start;
+        margin: auto;
+
+        margin-left: 10%;
+    }
+
+    .review-container {
+
+        width: 75%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .review-title {
+        gap: 174px;
+        height: 5vh;
+    }
+
+    .data-review {
+
+        width: 27%;
+    }
+
+    .reviw-card1 {
+        height: 15vh;
+    }
+
+    .review-direction {
+        gap: 19px;
+    }
+
+    .review-direction img {
+        width: 40%;
+    }
+    .name-rate{
+        width: 40vw;
+    }
+
+
+}
+
+/* big desktop */
+@media (min-width: 1441px) and (max-width:1920px) {
+    .btn-form {
+        width: 650px;
+        border-radius: 10px;
+        height: 50px;
+        margin-top: 10px;
+        border: 1px solid #FFC700;
+        box-sizing: border-box;
+    }
+
+    button {
+        text-align: center;
+        width: 155px;
+        height: 40px;
+        margin-left: 35%;
+        margin-top: 10px;
+        background-color: #FFC700;
+        border-radius: 10px;
+        color: #1C598E;
+        border: none;
+        margin-top: 50px;
+
     }
 }
