--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,3 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-
-
 /*start Detaile page*/
 .detaile-container {
     display: flex;
@@ -13,38 +5,43 @@
     align-items: center;
 }
 
-.content-detaile ul {
-    margin-left: 35px;
-}
+.reviw-card1 img {
+    width: 5%;
+    height: 10%;
+    padding-left: 21px;
+    padding-top: 5px;
 
-.img-detaile img {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
 
 }
 
 .content-detaile {
     margin-left: -229px;
     line-height: 26px;
-    margin-top: 86px;
+    margin-top: 205px;
+    font-size: 1.5em;
 }
 
-content-detaile h3,
-h4 {
+.content-detaile h4 {
+    text-transform: uppercase;
+}
+
+.content-detaile h3 {
     text-transform: uppercase;
 }
 
 .detaile-btn button {
-    width: 92px;
-    border-radius: 15px;
-    height: 34px;
+    width: 170px;
+    border-radius: 6px;
+    height: 35px;
     margin-top: 28px;
     margin-left: 10px;
     border: 1px solid #FFC700;
     box-sizing: border-box;
+
+}
+
+.detaile-btn .btn1 {
+    background-color: white;
 
 }
 
@@ -53,20 +50,28 @@ h4 {
 }
 
 .review-container {
+
     display: flex;
     flex-direction: column;
-    gap: 30px;
     margin-top: 10%;
     justify-content: space-around;
     align-items: center;
 
 }
 
+.content-review p {
+    margin-top: -9px;
+}
+
 .review-title {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    gap: 787px;
+    gap: 763px;
+    border: 1px solid #EEEEEE;
+    border-radius: 20px 20px 0px 0px;
+    height: 9vh;
+    width: 70%;
 }
 
 .review-direction {
@@ -75,9 +80,20 @@ h4 {
 }
 
 .reviw-card1 {
-    border-style: outset;
-    border-bottom: 1px solid gray;
+    border: 1px solid #EEEEEE;
+    height: 9vh;
+    width: 70%;
 
+}
+
+.name-rate {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.rate {
+    margin-left: 14px;
 }
 
 .view-border {
@@ -87,13 +103,31 @@ h4 {
 .share-review {
     display: flex;
     gap: 4px;
+    margin-left: 15%;
+    justify-content: flex-start;
 }
+
+.icon-review {
+    margin-top: 44px;
+}
+
+.data-review {
+    color: #BBBBBB;
+    margin-left: 24%;
+}
+
+.share-review h5 {
+    font-size: 1.5em;
+}
+
+
+
 
 /*start submit css*/
 h2 {
-    color: #1C598E;
+    color: #1D1D1B;
     text-align: center;
-    margin-top: 3em;
+
 }
 
 
@@ -121,7 +155,7 @@ form {
 
 }
 
-button {
+#btn-submit {
     text-align: center;
     width: 90px;
     height: 30px;
@@ -131,4 +165,14 @@ button {
     border-radius: 10px;
     color: #1C598E;
     border: none;
+}
+
+#icon-plus {
+    color: #1C598E;
+    position: absolute;
+    right: 31%;
+    font-size: 3.5em;
+    border: -0.5px solid;
+    top: 643px;
+
 }
